--- a/config.toml
+++ b/config.toml
@@ -10,9 +10,9 @@ home = [ "HTML", "RSS", "JSON"]
 
 [params]
   themeVariant = "workshop"
-  editURL = "https://github.com/andrewaddo/awsbaseline/tree/master/content/"
+  editURL = "https://github.com/czhc/awsbaseline/tree/master/content/"
   description = "AWS Baseline"
-  author = "Andrew Do"
+  author = "AWS SUS"
   showVisitedLinks = true
   disableBreadcrumb = false
   disableNextPrev = false
